test/1.2/errors/ECYCLICIMP_1.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

/// SCAN-FOR-TAGS ECYCLICIMP_2.dml
/// ERROR ECYCLICIMP
import "ECYCLICIMP_2.dml";
